{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 102,
  "lineage": "5f7f0222-20e3-92fd-b348-df54fa651d47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152383337859:internet-gateway/igw-092b94e95517fa9f7",
            "id": "igw-092b94e95517fa9f7",
            "owner_id": "152383337859",
            "tags": {
              "Name": "internet"
            },
            "tags_all": {
              "Name": "internet"
            },
            "vpc_id": "vpc-0037e7875eb157d67"
          },
          "dependencies": [
            "aws_vpc.iti1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-082d909c99a46a5fc",
            "network_interface_id": "eni-04cfa7b44bf2e2e7a",
            "private_ip": "30.0.2.36",
            "subnet_id": "subnet-0dfcfccabb6d82341"
          },
          "dependencies": [
            "aws_subnet.prv1",
            "aws_vpc.iti1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prvrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152383337859:route-table/rtb-082a627ad0c256168",
            "id": "rtb-082a627ad0c256168",
            "owner_id": "152383337859",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prv.rout"
            },
            "tags_all": {
              "Name": "prv.rout"
            },
            "timeouts": null,
            "vpc_id": "vpc-0037e7875eb157d67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152383337859:route-table/rtb-0ec11c547982fc2d1",
            "id": "rtb-0ec11c547982fc2d1",
            "owner_id": "152383337859",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pub.rout"
            },
            "tags_all": {
              "Name": "pub.rout"
            },
            "timeouts": null,
            "vpc_id": "vpc-0037e7875eb157d67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152383337859:subnet/subnet-0dfcfccabb6d82341",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfcfccabb6d82341",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152383337859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privat1"
            },
            "tags_all": {
              "Name": "privat1"
            },
            "vpc_id": "vpc-0037e7875eb157d67"
          },
          "dependencies": [
            "aws_vpc.iti1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152383337859:subnet/subnet-09bb7c5392362dbd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "30.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bb7c5392362dbd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152383337859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privat2"
            },
            "tags_all": {
              "Name": "privat2"
            },
            "vpc_id": "vpc-0037e7875eb157d67"
          },
          "dependencies": [
            "aws_vpc.iti1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152383337859:subnet/subnet-0a7733505d65e6d05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7733505d65e6d05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152383337859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0037e7875eb157d67"
          },
          "dependencies": [
            "aws_vpc.iti1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152383337859:subnet/subnet-098b95b67f2aedcd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "30.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098b95b67f2aedcd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152383337859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-0037e7875eb157d67"
          },
          "dependencies": [
            "aws_vpc.iti1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152383337859:vpc/vpc-0037e7875eb157d67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-0236556df03d44e43",
            "default_route_table_id": "rtb-0eaae0e0f0efad49f",
            "default_security_group_id": "sg-01b2d5f60b4f342b3",
            "dhcp_options_id": "dopt-04aac27859a8f39b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0037e7875eb157d67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eaae0e0f0efad49f",
            "owner_id": "152383337859",
            "tags": {
              "Name": "iti1"
            },
            "tags_all": {
              "Name": "iti1"
            }
          }
        }
      ]
    }
  ]
}